<resources>
    <string name="app_name">Sangeet Learner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guitar_chord_detail">A guitar chord is a set of notes played on a guitar. <u><b>Chords here</b></u></string>
    <string name="harmonium_detail_text">A harmonium is a keyboard instrument that is a lot like an organ.<b><b><u><b>Chords here</b></u></b></b> </string>
    <string name="Piano_detail_text">A Piano chord is a group of three or more notes played simultaneously.<u><b>Chords here</b></u></string>
    <string name="harmonium_page">"1.  Sa  (Shudh)   \n2.  re  (Komal)  \n3.  Re  (Shudh)  \n4.  ga  (Komal)  \n5.  Ga  (Shudh)  \n6.  ma  (Shudh)  \n7.  Ma  (Teevra)  \n8.  Pa  (Shudh)  \n9.  dha (Komal)  \n10.Dha (Shudh)  \n11.ni   (Komal)  \n12.Ni   (Shudh)</string>
    <string name="title_activity_scale_chords">ScaleChords</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>

    <string name="main_menu"><b>\'Main Menu\'</b> show multiple option like Gide, Theme, Ratting and etc.</string>
    <string name="guide"><b>\'Guide\'</b> guide the user, how to use this app.</string>
    <string name="theme"><b>\'Theme\'</b> Here you can change the theme of the app.</string>
    <string name="ratting_bar"><b>\'Ratting Bar\'</b> here user can give ratting to this app and See Overall ratting.</string>
    <string name="contact"><b>\'Contact\'</b> Here u can contact to a developer.</string>
    <string name="exit"><b>\'Exit\'</b> you can exit the app here.</string>
    <string name="bottom_navigation"><b>\'Bottom Navigation\'</b> here you can see Guitar, Harmonium, Piano Theory.</string>
    <string name="guitar_theory"><b>\'Guitar Theroy\'</b> here you can access the Guitar Theory</string>
    <string name="harmonium_theory"><b>\'Harmonium Theory\'</b> here you can access the Harmonium Theory.</string>
    <string name="piano_theory"><b>\'Harmonium Theory\'</b> here you can access the Piano Theory.</string>
    <string name="scale_chord"><b>\'Scale Chord\'</b> here you can access the chords of a particular scale.</string>
    <string name="transpose"><b>\'Transpose\'</b> here you can transpose the chords of a particular song.</string>
    <string name="scale"><b>\'Scale\'</b> here you can access the scale of a any particular note in Indian and Western music.</string>
    <string name="tanpura"><b>\'Tanpura\'</b> here you can play tanpura and train your vocal (riyaz).</string>




    <string name="about_sangeet_learner">

        <font color='#C0392B'><b>❓ What is Sangeet Learner?</b></font>\n
        Sangeet Learner is a music learning and reference app designed for musicians, students, and music enthusiasts. It helps users find scales, learn chords, transpose songs, use a Tanpura, and understand the theory of instruments like the guitar, piano, and harmonium.\n\n

        <font color='#145A32'><b>🎼 How does Sangeet Learner help with scales and chords?</b></font>\n
        - Find the scale of any note quickly.\n
        - Get chords for any particular note scale, making it easier to compose and play songs.\n
        - Explore a complete chord library for guitar and piano with diagrams for better visualization.\n\n

        <font color='#145A32'><b>🎶 Can I transpose chords of a song?</b></font>\n
        Yes! Sangeet Learner provides an easy-to-use chord transposition feature, allowing you to shift the chords of a song to a different key. This is perfect for adapting songs to your vocal range or instrument tuning.\n\n

        <font color='#145A32'><b>🎻 What is the Tanpura feature?</b></font>\n
        For Indian classical music learners, Sangeet Learner includes a built-in Tanpura that produces a continuous drone sound. This helps in:\n
        - Practicing vocal exercises.\n
        - Learning ragas.\n
        - Using it as an accompaniment during instrumental practice.\n\n

        <font color='#145A32'><b>🎸 What kind of theory does Sangeet Learner provide?</b></font>\n
        The app offers detailed explanations and learning materials for:\n
        - Guitar theory – Understanding fretboard, scales, and chord structures.\n
        - Piano theory – Learning about notes, scales, and chord progressions.\n
        - Harmonium basics – Mastering Indian music scales, sargam, and playing techniques.\n\n

        <font color='#145A32'><b>🎹 How does the chord library work?</b></font>\n
        Sangeet Learner has a comprehensive database of chords for both guitar and piano, with visual diagrams. This makes it easy to find and play the right chords for any song.\n\n

        <font color='#145A32'><b>🎵 Who should use Sangeet Learner?</b></font>\n
        This app is perfect for:\n
        - Musicians and Composers – To explore scales, chords, and transpositions.\n
        - Guitarists, Pianists and Harmonium Players – To improve their skills.\n
        - Indian Classical Music Learners – To use the Tanpura for practice.\n
        - Music Students and Teachers – To use it as a learning and teaching tool.\n\n

        <font color='#145A32'><b>🚀 How can I start using Sangeet Learner?</b></font>\n
        Simply download the app and start exploring the world of music theory, scales, chords, and more! Whether you\'re a beginner or an advanced musician, Sangeet Learner is your ultimate guide to mastering music. 🎶\n
    </string>



</resources>