<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guide_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#00145A"
            android:gravity="center"
            android:text="Guide"
            android:textColor="#F6F5F5"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="676dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="661dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintVertical_bias="1.0">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Main menu:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/main_menu"
                    android:textColor="#000" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="428dp"
                    android:layout_marginTop="8dp"
                    android:foregroundGravity="center"
                    android:src="@drawable/drawerimg"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.494"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="195dp" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Guide:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:background="@drawable/bottom_border"
                    android:text="@string/guide"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Theme:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/theme"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="About:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="about"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Ratting bar:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/ratting_bar"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Contact:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:background="@drawable/bottom_border"
                    android:text="@string/contact"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Exit:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/exit"
                    android:textColor="#000" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/bottomnavigationimg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Bottom Navigation:"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/bottom_navigation"
                    android:textColor="#000" />



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/guitartheoryimg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Guitar Theory"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/guitar_theory"
                    android:textColor="#000" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/harmoniumtheoryimg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Harmonium Theory"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:background="@drawable/bottom_border"
                    android:text="@string/harmonium_theory"
                    android:textColor="#000" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/pianotheoryimg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Piano Theory"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/piano_theory"
                    android:textColor="#000" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/scalechordsimg"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Scale Chords"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/scale_chord"
                    android:textColor="#000" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/transposeimg"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Transpose"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/tanpura"
                    android:textColor="#000" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/scaleimg"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Scale"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/scale"
                    android:textColor="#000" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="424dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/tanpuraimg"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Tanpura"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bottom_border"
                    android:gravity="center"
                    android:text="@string/tanpura"
                    android:textColor="#000" />




            </LinearLayout>

        </ScrollView>

    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>